[package]
name = "racine"
version = "0.1.4"
edition = "2021"
description = "A basic DNS server with geo-lookup for multi-region routing."
authors = ["Justin Duch <justin@duch.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/halcyonnouveau/racine"
keywords = ["dns", "maxmind", "dns-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
maxminddb = "0.23.0"
rayon = "1.7.0"
serde = "1.0.175"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trust-dns-resolver = { version = "0.22.0", features = ["serde-config"] }
trust-dns-server = "0.22.1"
url = "2.4.0"
